<resources>
    <string name="app_name">uFood</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="on_sale">¡On Sale!</string>
    <string name="price">Price</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_report">Reports</string>
    <string name="see_all">See All</string>
    <string name="name">Name</string>
    <string name="add_food">Add Food</string>
    <string name="there_are_invalid_fields_message">There are invalid fields</string>
    <string name="type_of_food">Type plate</string>
    <string name="kind_of_food">Kind of food</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update_food">Update Food</string>

    <string-array name="typeOfFood">
        <item>Meat</item>
        <item>Chicken</item>
        <item>Fish</item>
        <item>Soup</item>
        <item>Rice</item>
        <item>Salad</item>
        <item>Drink</item>
        <item>Other</item>
    </string-array>

    <string-array name="kindOfFood">
        <item>Colombian</item>
        <item>Mexican</item>
        <item>Italian</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="longClickAction">
        <item>@string/edit</item>
        <item>@string/delete</item>
    </string-array>

    <string-array name="reports">
        <item>@string/on_sale</item>
        <item>@string/kind_of_food</item>
    </string-array>
</resources>
