<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_48dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_see_all"
        android:orderInCategory="100"
        android:title="@string/see_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="@string/action_report"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_on_sale"
                android:orderInCategory="100"
                android:title="@string/on_sale"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_kind_of_food"
                android:orderInCategory="100"
                android:title="@string/kind_of_food"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
