<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HandleFoodActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerTypeOfFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/typeOfFood" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerKindOfFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/kindOfFood" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbOnSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_sale" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bUpdateFood"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?selectableItemBackground"
            android:text="@string/update_food"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bAddFood"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?selectableItemBackground"
            android:text="@string/add_food"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
</LinearLayout>
