<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:foreground="?android:selectableItemBackground"
    app:cardCornerRadius="0dp"
    app:cardElevation="5dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/onSaleBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="7.5dp"
            android:text="@string/on_sale"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/onSaleBackground"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@id/onSaleBackground"
            android:gravity="center"
            android:text="New Text"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/headerDivider"
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:layout_below="@id/tvFoodName"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvTypeOfFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerDivider"
            android:text="@string/type_of_food"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvKindOfFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTypeOfFood"
            android:text="@string/kind_of_food"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvKindOfFood"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <View
            android:id="@+id/descriptionDivider"
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:layout_below="@id/tvDescription"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/descriptionDivider"
            android:text="@string/price"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
